--- a/anticipate_frontend/client/public/index.html
+++ b/anticipate_frontend/client/public/index.html
@@ -42,5 +42,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<!-- <footer class="footer">
+  <p> Anticipate &copy; Copyright 2020</p> -->
+</footer>
 
 </html>
